address review comments

--- a/rfc/rfc-102/rfc-102.md
+++ b/rfc/rfc-102/rfc-102.md
@@ -67,10 +67,13 @@ In other words, the RLI index metadata will serve as the same role of the `flink
 We need fast access in streaming to have high throughput(ideally per record access should be < 10ms), thus a general hotspot cache is needed. We will build a in-memory LRU cache by the active upsert records keys, the cache items will be force evictted by a configured memory threshold.
 
 We also need a memory cache for the index mappings of current checkpoint because it is not committed to Hudi table yet so invisible.
-This cache can be cleaned once the checkpoint/instant is committed to Hudi.
+This cache can be cleaned once the checkpoint/instant is committed to Hudi(indicates that the index payloads are also committed).
 
 On job restart or task failover, there is use case that the checkpoint succeeds on Flink while the instant is not committed to Hudi, for DT metadata, the pipeline will recommit
-the instant with the recovered table metadata, while for RLI access, we need to include these special inflight instants on queries, basically, we need to support reading inflight instants on MDT.
+the instant with the recovered table metadata, because the `BucketAssigner` operator is the upstream operator of `StreamWrite` operator,
+we do not want to block the processing of `BucketAssigner`(to wait for the inflight instants to recommit successfully). The suggested solution is
+to include these special inflight instants on RLI access queries, basically, we need to support reading inflight instants on MDT.
+These inflight instants are the ones whose corresponding checkpoint has succeeded, inflight instants without successful checkpoint are not included.
 
 The query will access the in-memory cache first then the MDT RLI index:
 
