add details for flink ingestion recovery

--- a/rfc/rfc-102/rfc-102.md
+++ b/rfc/rfc-102/rfc-102.md
@@ -70,10 +70,11 @@ We also need a memory cache for the index mappings of current checkpoint because
 This cache can be cleaned once the checkpoint/instant is committed to Hudi(indicates that the index payloads are also committed).
 
 On job restart or task failover, there is use case that the checkpoint succeeds on Flink while the instant is not committed to Hudi, for DT metadata, the pipeline will recommit
-the instant with the recovered table metadata, because the `BucketAssigner` operator is the upstream operator of `StreamWrite` operator,
-we do not want to block the processing of `BucketAssigner`(to wait for the inflight instants to recommit successfully). The suggested solution is
+the instant with the recovered table metadata, because the `BucketAssigner` operator is the upstream operator of `StreamWrite` operator, there is time gap for these inflight instants to recommit,
+and we do not want to block the processing of `BucketAssigner`(to wait for the inflight instants to recommit successfully). The suggested solution is
 to include these special inflight instants on RLI access queries, basically, we need to support reading inflight instants on MDT.
 These inflight instants are the ones whose corresponding checkpoint has succeeded, inflight instants without successful checkpoint are not included.
+See more details in the appendix for Job/Task failover.
 
 The query will access the in-memory cache first then the MDT RLI index:
 
@@ -117,3 +118,18 @@ In order not take up too much task slot, we will reuse the current compaction su
 2. Ensure the async compaction with mixed DT/MDT work as expected;
 3. Add new test to cover the job recovery with uncommitted DT/MDT commits;
 4. Benchmark to get the upper threshold volume that suggests to enable RLI on streaming.
+
+## Appendix
+
+### The Job/Task failover
+
+In order to keep exactly-once semantics, we have some basic infra to support the job/task recovery:
+
+1. in `coordinator`, the history uncommitted metadata is stored in the checkpoint;
+2. in `StreamWrite` operator, the current write metadata list would be stored in the checkpoint;
+
+When the job is restarted, these steps are triggered to recover the uncommitted instants:
+
+1. the `StreamWrite` will check whether there are pending instants in the checkpoint and will resend an event to `coordinator` to collect the uncommitted metadata;
+2. the `coordinator` will recover the write metadata list from checkpoint;
+3. the `coordinator` recommits the uncommitted instants with the metadata list from 1 and 2.
