--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -26,7 +26,7 @@
 
 ## Status
 
-JIRA: https://issues.apache.org/jira/browse/HUDI-9798
+JIRA: 
 
 > Please keep the status updated in `rfc/README.md`.
 
