--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -23,14 +23,11 @@
 
 ## Approvers
 - @danny0405
+- @vinothchandar
 
 ## Status
 
-JIRA: 
-
-> Please keep the status updated in `rfc/README.md`.
-
- functional tests to ensure the end-to-end writer flows work as expected when using a custom merger implementation.
+Main issue: https://github.com/apache/hudi/issues/14310
 
 ## Background
 
@@ -70,19 +67,40 @@ To realize this layout:
 
 ## Considerations
 
-- The layout is only applicable to **MOR tables** (no effect for **COW** tables even if enabled).
-- Write operations should remain semantically unchanged when the layout is enabled.
-- When **small file handling** occurs, inserts may be bin-packed into small file slices without log files, creating a **new base file** → **sorted write** is still required.
-- Write indexing types should not affect enabling the LSM layout.
-- The most performant setup is expected to be:
-  - **bucket index + bulk insert**
-  - which best utilizes sorted merging  
-  - downside: small files may proliferate → mitigated via **more log compaction**
-- Reader indexes should not be impacted.
-- The layout should be **engine-agnostic**.
-- For Flink writer using buffer sort, the sink must **flush sorted records into a single file** to guarantee file-level ordering.
-- Under LSM layout, clustering is restricted to **record key sorting** only.
-  - For **MOR + bucket index**, clustering is typically **not required**.
+### Table configs
+
+The layout should be enforced by a table property, for e.g. `hoodie.table.lsm_tree.layout.enabled=true` (default `false`):
+
+- The config is not allowed to be set to `true` for an existing table
+- The config is allowed to be set to `false` for an existing table
+
+The layout is only applicable to MOR table, and not applicable to COW. When setting the layout config for a COW table, the persisted config for the layout will always be false.
+
+When an LSM-tree layout enabled MOR table is migrated to COW, the layout config will automatically set to `false`.
+
+### Engine-agnostic
+
+The layout should be engine-agnostic. Writer engines can make use of shared implementation and add specific logic or design to comform to the layout.
+
+For example, Flink writers use buffer sort, the Flink sink must flush sorted records into a single file to guarantee file-level ordering.
+
+### Write operations
+
+Write operations should remain semantically unchanged when the layout is enabled.
+
+In MOR tables, when **small file handling** occurs, inserts may be bin-packed into file slices without log files, creating a new base file, the **sorted write** needs to be applied.
+
+The most performant writer setup for LSM tree layout will be bucket index + bulk insert, which best utilizes sorted merging. The downside would be that small files may proliferate, which can be mitigated by doing log compaction.
+
+### Indexes
+
+Writer indexes should still function as is under this layout. Same for reader indexes.
+
+### Clustering
+
+Clustering will be restricted to **record key sorting** only. 
+
+For **MOR + bucket index** setup, clustering is typically not needed.
 
 ## Core Feature 1: Sorted Write
 
@@ -185,7 +203,7 @@ The compaction plan tracks individual **file groups** and determines whether eac
 
 Enable via a table config, e.g.:
 
-- `hoodie.table.lsm_tree.layout=true`
+- `hoodie.table.lsm_tree.layout.enabled=true`
 
 Writers, compaction runners, and readers will respect this setting and perform:
 
