change the title/scope to include SI

--- a/rfc/rfc-102/rfc-102.md
+++ b/rfc/rfc-102/rfc-102.md
@@ -14,7 +14,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-# RFC-102: RLI support for Flink streaming
+# RFC-102: RLI and SI support for Flink sink
 
 ## Proposers
 
@@ -32,14 +32,14 @@ GH Discussion: https://github.com/apache/hudi/discussions/17452
 > Please keep the status updated in `rfc/README.md`.
 
 ## Abstract
-This RFC aims to introduce RLI support for Flink streaming:
+This RFC aims to introduce RLI and SI support for Flink streaming:
 
 - Impl reliable and performant write and read support for RLI via Flink APIs;
 - The RLI impl is engines compatible, for e.g, Flink can access and utilize the RLI written by Spark and vice versa;
 - The RLI is global, upserts among partitions is supported; Also support partition level RLI for large fact tables;
 - Async compaction for MDT when RLI is enabled; in writer pipeline or table services background job;
 - Smart caching of RLI;
-- Clearly set limits for the kind of write throughput supported by RLI (based on certain average response time for the RLI access, like from x0ms to x00ms) via empirical benchmarks;
+- Clearly document scale/performance limits for write throughput supported by RLI (based on certain average response time for the RLI access, like from x0ms to x00ms) via empirical benchmarks;
 - Ability to be expanded to arbitrary secondary indexing on different columns.
 
 ## Background
@@ -80,20 +80,20 @@ The query will access the in-memory cache first then the MDT RLI index:
 
 ![The RLI Access Pattern](./rli-access-pattern.png)
 
-### The Shuffle of RLI Payloads
+### The Shuffle of RLI/SI Payloads
 In `StreamWrite` operator, the index items are inferred and sent to `IndexWrite` operator in streaming style, the index records are shuffled by `hash(record_key) % num_rli_shards`(the same hashing algorithm of the MDT `RLI index` partitioner),
 this is critical to avoid `N*M` files to write to MDT partition(`N` is the RLI partition buckets number, `M` is the data table buckets involved in the current write).
 
 How do we ensure the data record and index record always belong to one commit/checkpoint: the barrier is flowing together with the records in Flink, see [how-does-state-snapshotting-work](https://nightlies.apache.org/flink/flink-docs-master/docs/learn-flink/fault_tolerance/#how-does-state-snapshotting-work),
 when the `StreamWrite` operator received a record, it emits its corresponding index record in one `#processElement` call, so we can always keep the bindings of these two, in other words, no barrier would be amidst of the two.
 
-### The RLI Write
+### The RLI/SI Write
 In `IndexWrite` operator, the index items are buffered first and write to the MDT (triggered by Flink checkpoint), the write status metadata will be sent to the `coordinator`. The metadata sent to the coordinator includes two parts:
 
 - A: the written data file handles ;
 - B: the written MDT file handles(specifically under the RLI/SI partition)
 
-#### The Commit of MDT(including RLI)
+#### The Commit of MDT(including RLI/SI)
 And when commit to the data table, the MDT is committed firstly with the partial RLI/SI write metadata list(the MDT RLI/SI partition file handles info), the `RLI` and `SI` partition file handles info would be committed altogether with the `FILES` partition.
 
 On Flink checkpoint : each index/data writing task flushes all its records to RLI and data files respectively. So the RLI and data files are always consistent. We commit both as we do now, from Coordinator into a single hudi commit.
