address the review comments

--- a/rfc/rfc-102/rfc-102.md
+++ b/rfc/rfc-102/rfc-102.md
@@ -43,32 +43,42 @@ This RFC aims to introduce RLI and SI support for Flink streaming:
 - Ability to be expanded to arbitrary secondary indexing on different columns.
 
 ## Background
-Flink does not support RLI while spark does, this caused inconsistency between engines, for tables migrated from Spark to flink streaming, the index type needs to be switched to either bucket or flink_state , this caused a overhead for users in production.
+Flink does not support RLI while spark does, this caused inconsistency between engines, for tables migrated from Spark to flink streaming, the index type needs to be switched to either bucket or flink_state, which caused an overhead for users in production.
 
-Another reason is for multiple partition upserts, currently the only choice is flink_state index, but the flink_state actually costs a lot of memory and can not be shared between different workloads.
+Another motivation is for scalable, efficient support for cross-partition updates (where the partition path of the record is changed). Currently, the only choice is flink_state index, which can be costly when used in such a scenario to hold state proportional to the size of table.
+This is due to the fact that the flink_state could use a lot of memory and can not be shared between different workloads.
 
-## Implementation
+## High Level Design
 
 The high-level ideas:
 
-- a RLI based index backend will be there to replace the flink_state index;
-- a cache of RLI would be introduced to speed the access;
-- a separate index function to write the RLI/SI payloads;
-- the MDT RLI files is written synchronously with the data table data files, the metadata is sent to the coordinator for a final commit to the MDT(after `FILES` partition is ready);
+- an RLI based index backend will be added, which can be used in place of the current the flink_state index;
+- a cache of RLI would be introduced to speed the access; along with a caching invalidation mechanism to keep it consistent with committed state of the table.
+- a separate Flink index function to write the RLI/SI payloads;
+- the MDT RLI and SI files will be written synchronously with the data table data files, the metadata is sent to the coordinator for a final commit to the MDT(after `FILES` partition is ready);
 - the MDT compaction is switched to be async and the data files compaction pipeline is reused for less take up of task slots.
 
-### The Write
+![Index Write Flow](./index-write-flow.png)
+
+### Detailed Design
 
 ### The RLI Access
 In `BucketAssigner` operator, the RLI index metadata would be utilized as the index backend, the `BucketAssigner` operator will probe the RLI with the incoming record keys to figure out whether msg is update or insert or delete.
-In other words, the RLI index metadata will serve as the same role of the `flink_state` index.
+In other words, the RLI index metadata will serve as the same role of the `flink_state` index. Since current `BucketAssigner` already supports **global** and **non-global** index types, global RLI index would be applied for **global**
+index and partitioned RLI would be supported for **non-global** index.
+
+In order to read per RLI shard once per commit, and not cache all RLI shards for each `BucketAssigner` task, the input records of `BucketAssigner` will be shuffled by `hash(record_key) % num_rli_shards`(the same hashing algorithm of the MDT `RLI index` partitioner).
 
 #### The Cache of RLI Access
-We need fast access in streaming to have high throughput(ideally per record access should be < 10ms), thus a general hotspot cache is needed. We will build a in-memory LRU cache by the active upsert records keys, the cache items will be force evictted by a configured memory threshold.
+We need fast access in streaming to have high throughput(milliseconds-level per record access), a general hotspot cache is needed.
+We will build an in-memory LRU cache by the active upsert records keys, the cache items will be force evicted by a configured memory threshold.
 
 We also need a memory cache for the index mappings of current checkpoint because it is not committed to Hudi table yet so invisible.
-This cache can be cleaned once the checkpoint/instant is committed to Hudi(indicates that the index payloads are also committed).
+This cache is not allowed to be cleaned until the checkpoint/instant is committed to Hudi(indicates that the index payloads are also committed).
 
+We are caching `key -> location` mappings (record level cache) with LRU style eviction strategy with configurable cache size, the MDT reader also got its native file level cache though.
+
+#### Access of Valid but Uncommitted Instants
 On job restart or task failover, there is use case that the checkpoint succeeds on Flink while the instant is not committed to Hudi, for DT metadata, the pipeline will recommit
 the instant with the recovered table metadata, because the `BucketAssigner` operator is the upstream operator of `StreamWrite` operator, there is time gap for these inflight instants to recommit,
 and we do not want to block the processing of `BucketAssigner`(to wait for the inflight instants to recommit successfully). The suggested solution is
@@ -86,6 +96,14 @@ this is critical to avoid `N*M` files to write to MDT partition(`N` is the RLI p
 
 How do we ensure the data record and index record always belong to one commit/checkpoint: the barrier is flowing together with the records in Flink, see [how-does-state-snapshotting-work](https://nightlies.apache.org/flink/flink-docs-master/docs/learn-flink/fault_tolerance/#how-does-state-snapshotting-work),
 when the `StreamWrite` operator received a record, it emits its corresponding index record in one `#processElement` call, so we can always keep the bindings of these two, in other words, no barrier would be amidst of the two.
+For example:
+
+```text
+// irN means a index record, drN means a data record
+e.g:  [r4 r3 r2 r1 ] => BucketAssignor => [ ir4 dr4 ir3 dr3 ir2 dr2 ir1 dr1]
+```
+
+The barrier propagate algorithm can prevent the checkpoint barrier from being placed like this: [ ir4 dr4 ir3 dr3 ir2 <checkpoint barrier> dr2 ir1 dr1] (a barrier stays between an index record and it's corresponding data record).
 
 ### The RLI/SI Write
 In `IndexWrite` operator, the index items are buffered first and write to the MDT (triggered by Flink checkpoint), the write status metadata will be sent to the `coordinator`. The metadata sent to the coordinator includes two parts:
@@ -97,8 +115,6 @@ In `IndexWrite` operator, the index items are buffered first and write to the MD
 And when commit to the data table, the MDT is committed firstly with the partial RLI/SI write metadata list(the MDT RLI/SI partition file handles info), the `RLI` and `SI` partition file handles info would be committed altogether with the `FILES` partition.
 
 On Flink checkpoint : each index/data writing task flushes all its records to RLI and data files respectively. So the RLI and data files are always consistent. We commit both as we do now, from Coordinator into a single hudi commit.
-
-![Index Write Flow](./index-write-flow.png)
 
 In order to keep exactly once semantics for job recovery, the write status metadata will also need to be stored both in the `StreamWrite` operator, `IndexWrite` operator and the `coordinator`, pretty much the same behaviors of the current maintenance of the data table metadata.
 
