update addressing comments

--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -50,16 +50,19 @@ This RFC proposes applying LSM-inspired principles (**sequential writes + tiered
 
 ## Design Overview
 
-![img.png](img.png)
+![01-lsm-tree-layout-overview](01-lsm-tree-layout-overview.png)
 
 The core idea is to treat, **within each file group**:
 
 - **Log files** as **Level-0 (L0)** of an LSM tree
-- **Base file** as **Level-1 (L1)**
+- The only **Base file** as **Level-1 (L1)**
+
+The file naming formats for base and log files should retain unchanged.
 
 To realize this layout:
 
 - Records inside **log and base files must be sorted** (**Core Feature 1**)
+- Records should be deduplicated before writing to any log file, i.e., no dups within a log file. Duplicates can be seen across log files.
 - Existing services should implement **sorted merge-based compaction**:
   - **log-compaction** handles **L0 compaction**
   - **compaction table service** handles **L0 → L1 compaction**
@@ -69,10 +72,10 @@ To realize this layout:
 
 ### Table configs
 
-The layout should be enforced by a table property, for e.g. `hoodie.table.lsm_tree.layout.enabled=true` (default `false`):
+The layout should be enforced by a table property, for e.g. `hoodie.table.storage.layout=base_log|lsm_tree` (default `base_log`, which is current base/log file organization):
 
-- The config is not allowed to be set to `true` for an existing table
-- The config is allowed to be set to `false` for an existing table
+- The config is not allowed to be set to `lsm_tree` for an existing table
+- The config is allowed to be set to `base_log` for an existing table
 
 The layout is only applicable to MOR table, and not applicable to COW. When setting the layout config for a COW table, the persisted config for the layout will always be false.
 
@@ -119,7 +122,7 @@ All writes are sorted. That is, within any written file (**base or log**), recor
 
 ### Example: Flink Streaming Write Pipeline
 
-![img_1.png](img_1.png)
+![02-write-with-disruptor-buffer-sort](02-write-with-disruptor-buffer-sort.png)
 
 The write pipeline mainly consists of four core stages:
 
@@ -130,20 +133,15 @@ The write pipeline mainly consists of four core stages:
 
 Optimizations:
 
-1. **Unified data representation**  
-   Use Flink’s native **RowData** format throughout the pipeline to reduce serialization overhead and minimize format conversions.
-
-2. **Asynchronous processing architecture**  
+1. **Asynchronous processing architecture**  
    Introduce a **Disruptor ring buffer** within the sink operator to decouple production and consumption, significantly improving throughput and handling cases where the producer outpaces the consumer.
 
-3. **Efficient memory management**  
+2. **Efficient memory management**  
    Integrate Flink’s built-in **MemorySegmentPool** with **BinaryInMemorySortBuffer** to enable fine-grained memory control and efficient sorting, greatly reducing GC pressure and sorting overhead.
-
-
 
 ## Core Feature 2: Sorted Merge Read / Compaction
 
-![img_2.png](img_2.png)
+![03-k-way-merging](03-k-way-merging.png)
 
 During read and compaction, merging is performed using a **sorted merge algorithm** (e.g., **loser-tree** for k-way merge).
 
@@ -201,9 +199,12 @@ The compaction plan tracks individual **file groups** and determines whether eac
 
 ## Configuration
 
-Enable via a table config, e.g.:
+The LSM tree layout can be enabled using a table config:
 
-- `hoodie.table.lsm_tree.layout.enabled=true`
+```properties
+# default "base_log"
+hoodie.table.storage.layout=lsm_tree
+```
 
 Writers, compaction runners, and readers will respect this setting and perform:
 
@@ -230,4 +231,3 @@ Writers, compaction runners, and readers will respect this setting and perform:
   - vectorized reads
   - pruning
 - improved point lookups and range queries
-
