add more details about two-phase commit

--- a/rfc/rfc-102/rfc-102.md
+++ b/rfc/rfc-102/rfc-102.md
@@ -77,12 +77,33 @@ We also need a memory cache for the index mappings of current checkpoint because
 This cache is not allowed to be cleaned until the checkpoint/instant is committed to Hudi(indicates that the index payloads are also committed).
 
 We are caching `key -> location` mappings (record level cache) with LRU style eviction strategy with configurable cache size, the MDT reader also got its native file level cache though.
+If we see same record key again within the commit, the cache guarantees the same key gets routed to the same location on data table.
+
+The actual writes happens in the `IndexWrite` operator, here in `BucketAssign` operator, we just needs the cache plus MDT to query the locations,
+the cache is updated for new records/location changes while the MDT is only for querying existing key locations.
+
+The update flow of the cache:
+
+1. probe the cache if the key exists, if it does, update the cache if the location changes;
+2. if the key does not exist in the cache, fall back to query the MDT, if the key exists there, update the cache with its location;
+3. if the key does not exist in the MDT either, update the cache directly. 
 
 #### Access of Valid but Uncommitted Instants
-On job restart or task failover, there is use case that the checkpoint succeeds on Flink while the instant is not committed to Hudi, for DT metadata, the pipeline will recommit
-the instant with the recovered table metadata, because the `BucketAssigner` operator is the upstream operator of `StreamWrite` operator, there is time gap for these inflight instants to recommit,
+The Hudi instant is designed to commit to Hudi with two-phase commit, one checkpoint corresponds to a Hudi instant, the Flink checkpoint completes the actual data ingestion the collection of Hudi commit metadata,
+once the checkpoint ack event got received, Flink can ensure the checkpoint finished successfully thus the instant can be committed to Hudi.
+The current ack msg sent by Flink is async also best-effort and could loss in corner cases, a Hudi instant can not commit without
+the checkpoint ack event.
+
+On job restart or task failover, there is use case that the checkpoint succeeds on Flink while the instant is not committed to Hudi due to the two-phase commit mechanism for these cases:
+
+1. the ack msg is missing;
+2. the ack msg received but the job got restarted during the instant commit;
+3. the task fails over from a checkpoint with its ack msg not received yet(or received but has not complete the instant commit to Hudi).
+
+For DT metadata, the pipeline will recommit the instant with the recovered table metadata, because the `BucketAssigner` operator is the upstream operator of `StreamWrite` operator, there is time gap for these inflight instants to recommit,
 and we do not want to block the processing of `BucketAssigner`(to wait for the inflight instants to recommit successfully). The suggested solution is
 to include these special inflight instants on RLI access queries, basically, we need to support reading inflight instants on MDT.
+
 These inflight instants are the ones whose corresponding checkpoint has succeeded, inflight instants without successful checkpoint are not included.
 See more details in the appendix for Job/Task failover.
 
