update addressing comments

--- a/rfc/rfc-103/rfc-103.md
+++ b/rfc/rfc-103/rfc-103.md
@@ -22,6 +22,7 @@
 - @xushiyan
 
 ## Approvers
+
 - @danny0405
 - @vinothchandar
 
@@ -61,7 +62,7 @@ The file naming formats for base and log files should retain unchanged.
 
 To realize this layout:
 
-- Records inside **log and base files must be sorted** (**Core Feature 1**)
+- Records inside **log and base files must be sorted by record key(s)** (**Core Feature 1**)
 - Records should be deduplicated before writing to any log file, i.e., no dups within a log file. Duplicates can be seen across log files.
 - Existing services should implement **sorted merge-based compaction**:
   - **log-compaction** handles **L0 compaction**
@@ -72,14 +73,15 @@ To realize this layout:
 
 ### Table configs
 
-The layout should be enforced by a table property, for e.g. `hoodie.table.storage.layout=base_log|lsm_tree` (default `base_log`, which is current base/log file organization):
+The layout should be enforced by a table property, for e.g. `hoodie.table.storage.layout=default|lsm_tree` (default value: `default`, which is current base/log file organization):
 
 - The config is not allowed to be set to `lsm_tree` for an existing table
-- The config is allowed to be set to `base_log` for an existing table
+- The config is allowed to be set to `default` for an existing table
+- The config is set to `default` by default
 
 The layout is only applicable to MOR table, and not applicable to COW. When setting the layout config for a COW table, the persisted config for the layout will always be false.
 
-When an LSM-tree layout enabled MOR table is migrated to COW, the layout config will automatically set to `false`.
+When an LSM-tree layout enabled MOR table is migrated to COW, the layout config will automatically set to `default`.
 
 ### Engine-agnostic
 
@@ -107,18 +109,9 @@ For **MOR + bucket index** setup, clustering is typically not needed.
 
 ## Core Feature 1: Sorted Write
 
-All writes are sorted. That is, within any written file (**base or log**), records are fully sorted by key(s).
+All writes are sorted. That is, within any written file (**base or log**), records are fully sorted by record key(s).
 
-### Initial support (v1)
-
-- `bulk_insert`
-- `insert_overwrite`
-- with **bucket index**
-
-### Future support
-
-- `insert`, `upsert`
-- other index types
+All write operations and writer index types should be supported, as the layout is only about keeping records sorted in data files, which is orthogonal to the choice of write operation and index type.
 
 ### Example: Flink Streaming Write Pipeline
 
@@ -215,7 +208,7 @@ The compaction plan tracks individual **file groups** and determines whether eac
 The LSM tree layout can be enabled using a table config:
 
 ```properties
-# default "base_log"
+# default value: "default"
 hoodie.table.storage.layout=lsm_tree
 ```
 
