--- a/website/blog/2021-02-24-Time-travel-operations-in-Hopsworks-Feature-Store.mdx
+++ b/website/blog/2021-02-24-Time-travel-operations-in-Hopsworks-Feature-Store.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Time travel operations in Hopsworks Feature Store"
+author: Hopsworks
 category: deep-dive
 image: /assets/images/blog/2021-02-24-featurestore_incremental_pull.png
 tags:
