--- a/website/blog/2023-05-09-amazon-athena-apache-hudi.mdx
+++ b/website/blog/2023-05-09-amazon-athena-apache-hudi.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Amazon Athena now supports Apache Hudi 0.12.2"
+author: AWS
 category: deep-dive
 image: /assets/images/blog/aws.jpg
 tags:
