--- a/website/blog/2023-10-22-Tipico-Facilitates-Faster-Data-Access-with-a-Modern-Data-Strategy-on-AWS.mdx
+++ b/website/blog/2023-10-22-Tipico-Facilitates-Faster-Data-Access-with-a-Modern-Data-Strategy-on-AWS.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Tipico Facilitates Faster Data Access with a Modern Data Strategy on AWS"
+author: AWS
 category: case-study
 image: /assets/images/blog/2023-10-22-Tipico-Facilitates-Faster-Data-Access-with-a-Modern-Data-Strategy-on-AWS.png
 tags:
