--- a/website/blog/2020-11-29-Can-Big-Data-Solutions-Be-Affordable.mdx
+++ b/website/blog/2020-11-29-Can-Big-Data-Solutions-Be-Affordable.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Can Big Data Solutions Be Affordable?"
+author: Analytics Insight
 category: deep-dive
 image: /assets/images/blog/2020-11-29-Can-Big-Data-Solutions-Be-Affordable.jpg
 tags:
