--- a/website/blog/2021-07-26-Baixin-banksreal-time-data-lake-evolution-scheme-based-on-Apache-Hudi.mdx
+++ b/website/blog/2021-07-26-Baixin-banksreal-time-data-lake-evolution-scheme-based-on-Apache-Hudi.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Baixin bank’s real-time data lake evolution scheme based on Apache Hudi"
+title: "Baixin bank's real-time data lake evolution scheme based on Apache Hudi"
+author: Developpaper
 category: case-study
 image: /assets/images/blog/2021-07-26-baixin-bank-real-time-data-lake.png
 tags:
