--- a/website/blog/2025-11-07-how-freewheel-uses-apache-hudi-to-power-its-data-lakehouse.mdx
+++ b/website/blog/2025-11-07-how-freewheel-uses-apache-hudi-to-power-its-data-lakehouse.mdx
@@ -21,6 +21,8 @@ Their original stack, shown below, used multiple systems like **Presto**, **Clic
 
 ## Data freshness issues
 
+- Presto tables had a 3–4 hour delay, which was too slow for operational use cases.
+- Only ClickHouse and Druid offered near‑real‑time access (~5 minutes) but added complexity.
 
 ## Complex ingestion
 
