--- a/website/blog/2025-03-03-record-mergers-in-hudi.mdx
+++ b/website/blog/2025-03-03-record-mergers-in-hudi.mdx
@@ -6,7 +6,7 @@ category: deep-dive
 image: /assets/images/blog/2025-03-03-record-mergers-in-apache-hudi.png
 tags:
 - data lakehouse
-- record mergers
+- record merger
 - late arriving data
 ---
 
